--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,5 @@
-<li><a href="#">Register/Login</a></li>
-<li><a href="#">Home</a></li>
-<li><a href="#">About</a></li>
-<li><a href="#">Contat Us</a></li>
+<li><a href="#register">Register/Login</a></li>
+<li><a href="#home">Home</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#showcase">Showcase</a></li>
+<li><a href="#contactus">Contact Us</a></li>
