--- a/pages/home.html
+++ b/pages/home.html
@@ -45,7 +45,7 @@
           <h2 class="center  blue-grey-text"><i class="material-icons">add_shopping_cart</i></h2>
           <h5 class="center">As easy as order food-online</h5>
 
-          <p class="light">Oftenly grab your food online, this platform is also not different. See the photographer's catalog, like it, order the package, choose the date, and finished. Easy, isn't it?</p>
+          <p class="light">Oftenly grab your food online? this platform is also not different. See the photographer's catalog, like it, order the package, choose the date, and finished. Easy, isn't it?</p>
         </div>
       </div>
     </div>
