--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="manifest" href="/manifest.json">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="dicoding:email" content="hutomoivan@gmail.com">
+
   <title>Us&B Freelance Platforms</title>
 
   <!-- CSS  -->
